@@ -1,4 +1,8 @@
-﻿[B]Version 2.2.5[/B]
+﻿[B]Version 2.2.7[/B]
+[+] Проигрыватель: User-friendly объяснение причины невозможности стриминга
+[+] Торрент-клиент: Исправлено добавление magnet
+
+[B]Version 2.2.5[/B]
 [+] Списки Медиа: Исправлен KickAssSo
 [+] Списки Медиа: Исправлен поиск мета-данных TheMovieDB вызывавший ошибку
 [+] Поиск: Исправлен KickAssSo
